--- a/html/form-name.html
+++ b/html/form-name.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Form-Name example</title>
+        <link rel="stylesheet" href="./styles/styles.css" type="text/css" />
     </head>
     <body>
         <form action="contactus.php" method="post">
